--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content=""
+      content="Sara Peek Monteen"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="http://api.page2images.com/ccimages/b9/81/kBDcKmEyBeb7dw5S.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/profile.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
