Changing website preview image.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Sara Peek Monteen"
     />
-    <meta name="preview" property="og:image" content="http://api.page2images.com/ccimages/b9/81/kBDcKmEyBeb7dw5S.png" />
+    <meta name="preview" property="og:image" content="profile.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/profile.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
